# C-OOP-2-3-4

./: .gitignore  CMakeLists.txt
include/: account.h  general.h
src/: account.cpp  general.cpp  main.cpp
